--- a/repository.html
+++ b/repository.html
@@ -39,9 +39,9 @@
                 <div class="flex space-x-4 text-slate-900">
                     <button title="add file" data-bs-toggle="modal" data-bs-target="#addFile"><i class="fa-solid fa-file-circle-plus"></i></button>
                     <a title="bookmark this repository" href="#"><i class="fa-solid fa-bookmark"></i></a>
-                    <button id="addContributor" title="add contributor"><i class="fa-solid fa-user-plus"></i></button>
+                    <button data-bs-toggle="modal" data-bs-target="#addContributor" title="add contributor"><i class="fa-solid fa-user-plus"></i></button>
                     <button title="copy repository url"><i class="fa-solid fa-copy"></i></button>
-                    <button id="deleteRepository" title="delete this repository"><i class="fa-solid fa-trash-can"></i></button>
+                    <button data-bs-toggle="modal" data-bs-target="#deleteRepository" title="delete this repository"><i class="fa-solid fa-trash-can"></i></button>
                 </div>
             </div>
 
@@ -112,6 +112,49 @@
                         <div class="flex justify-end">
                             <button class="bg-sky-400 text-slate-50 font-bold py-1 px-3 rounded-full">Add New File</button>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- add contributor -->
+    <div class="modal fade" id="addContributor" tabindex="-1" aria-labelledby="addContributorLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content bg-slate-900 text-slate-50">
+                <div class="p-3">
+                    <div class="flex items-center justify-between">
+                        <h3>Add Contributor:</h3>
+                        <button type="button" class="btn-close text-slate-50" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-xmark"></i></button>
+                    </div>
+                    <div class="pt-5 flex flex-col space-y-3">
+                        <div class="flex space-x-2">
+                            <label for="#contributorEmail" class="after:content-['_*'] after:text-red-400">Email:</label>
+                            <input type="email" id="contributorEmail" placeholder="enter email..." class="px-2 py-1 rounded-full focus:outline-none">
+                        </div>
+                        <div class="flex justify-end">
+                            <button class="bg-sky-400 text-slate-50 font-bold py-1 px-3 rounded-full">Add Contributor</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- delete repository modal -->
+    <div class="modal fade" id="deleteRepository" tabindex="-1" aria-labelledby="deleteRepositoryLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content bg-slate-900 text-slate-50">
+                <div class="p-3">
+                    <div class="flex items-center justify-between">
+                        <h3>Want to delete this repository?</h3>
+                        <button type="button" class="btn-close text-slate-50" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-xmark"></i></button>
+                    </div>
+                    <div class="pt-5 flex justify-center space-x-5">
+                        <button class="bg-sky-400 text-[20px] px-2 rounded-full">Delete</button>
+                        <button class="bg-slate-50 text-slate-900 text-[20px] px-2 rounded-full">Cancel</button>
                     </div>
                 </div>
             </div>
