--- a/singlefile.html
+++ b/singlefile.html
@@ -49,8 +49,8 @@
             <div class="bg-sky-400 flex justify-between items-center px-2 py-1 rounded-md">
                 <h3 class="text-[24px] font-bold text-slate-50">Repository/hello.php</h3>
                 <div class="flex space-x-5">
-                    <span><i class="fa-solid fa-download"></i></span>
-                    <span><i class="fa-solid fa-trash-can"></i></span>
+                    <a href="#"><i class="fa-solid fa-download"></i></a>
+                    <button data-bs-toggle="modal" data-bs-target=""><i class="fa-solid fa-trash-can"></i></button>
                 </div>
             </div>
             <div class="bg-slate-300 p-3 rounded-md">
