--- a/navbar.html
+++ b/navbar.html
@@ -4,29 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar</title>
+    <title>GreenHub</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="bg-sky-400 py-1">
+    <nav class="bg-sky-500 py-1">
         <div class="container mx-auto flex justify-between items-center">
             <div>
-                <input class="rounded-full px-2 focus:outline-none text-slate-900" placeholder="search..." type="search" name="" id="">
+                <input class="rounded-full px-2 py-1 focus:outline-none text-slate-900" placeholder="search..." type="search" name="" id="">
             </div>
             <div class="flex space-x-4 text-slate-50 items-center text-[20px]">
-                <a href="signup.html">Signup</a>
-                <a href="index.html">Login</a>
-                <a href="dashboard.html">Dashboard</a>
-                <a href="repository.html">Repository</a>
-                <a href="singlefile.html">Single File</a>
-                <a href="bookmarks.html">Bookmarks</a>
-                <img class="w-[35px] h-[35px] rounded-full" src="/images/demo_user.webp" alt="">
+                <img class="w-[35px] h-[35px] rounded-full" src="images/ocr.jpeg" alt="">
+<!--                 <select name="" id="">
+                    <img class="w-[35px] h-[35px] rounded-full" src="images/ocr.jpeg" alt="">
+                </select>
+
+                <ul>
+                    <li>
+                        <a href=""></a>
+                        <div>
+                            <a href=""></a>
+                            <a href=""></a>
+                            <a href=""></a>
+                        </div>
+                    </li>
+                </ul> -->
+
+                <div class="dropdown show">
+                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Dropdown link
+                    </a>
+                  
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                      <a class="dropdown-item" href="#">Action</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                      <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                  </div>
             </div>
         </div>
     </nav>
+
+
 </body>
 </html>
